@@ -1,3 +1,8 @@
+*** 20011027_2 by db
+- removed another typedef 
+
+
+
 *** 20011027_1 by db
 - some res.c fixes
 
